--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ DWOLLA_KEY=iFP7XIjbaQEBoQu7labl6ajTpxKwCI1XRd4xBRMflQRvKDyFTI
 DWOLLA_SECRET=es2Db7P11CJJaKwqXttvP3xgAmrhlk9HpsCNicjuUfzYKzvhhl
 DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
 DWOLLA_ENV=sandbox
+
+SENTRY_SUPPRESS_GLOBAL_ERROR_HANDLER_FILE_WARNING=1 
